enable test for jdk 17 and 21